# atlas

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  ruff.toml
.github/workflows/: release.yml
src/: analysis.py  cli.py  indexer.py  parser.py  project.py  search.py  stats.py  storage.py  ui.py  updater.py
src/parsers/: base.py  parser.py  python.py
