[project]
name = "atlas"
version = "1.3.0"
description = "Project-Scoped Codebase Indexer & Search Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathspec>=0.12.1",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pyinstaller>=6.17.0",
    "ruff>=0.14.10",
]
